fix: table header misaligned with body

--- a/lyprox/dataexplorer/static/dataexplorer/table.css
+++ b/lyprox/dataexplorer/static/dataexplorer/table.css
@@ -1,7 +1,3 @@
-thead, tbody {
-    display: block;
-}
-
 tbody {
     overflow-y: scroll;
     height: 1024px;
